--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "axios": "^0.19.0",
     "bootstrap": "^3.4.1",
     "core-js": "^2.6.5",
+    "izitoast": "^1.4.0",
     "jquery": "^3.4.1",
     "vue": "^2.6.10",
     "vue-multiselect": "^2.1.6",
@@ -25,6 +27,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "vue-cli-plugin-webpack-bundle-analyzer": "^1.4.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
